1-istio-1.13.3/newInstallation/kialihttpingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-kiali
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: telemetry-gw-cert
    hosts:
    - "kiali.arkainc.test.dev"
  - port:
      number: 80
      name: http-kiali
      protocol: HTTP
    hosts:
    - "kiali.arkainc.test.dev"
